<resources>
    <string name="app_name">ClockClone</string>
    <string name="hour_divider">:</string>
    <string name="delete">Delete</string>
    <string name="sun">Su</string>
    <string name="mon">Mo</string>
    <string name="tue">Tu</string>
    <string name="wed">We</string>
    <string name="thu">Th</string>
    <string name="fri">Fr</string>
    <string name="sat">Sa</string>
    <string name="vibrate">Vibrate</string>
</resources>